--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
-    "sweetalert2": "^11.11.1",
-    "multer": "^1.4.5-lts.1"
+    "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0"
   }
 }
-
