--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
     "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "eslint-plugin-mongodb": "^1.0.0"
   }
 }
