--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "moment": "^2.30.1",
+    "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
     "sweetalert2": "^11.11.1"
