--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "eslint-plugin-mongodb": "^1.0.0"
   }
 }
